[JVMCI] Missing JVMCI flag default values

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b156

        During the initial JEP commit for JVMCI we forgot to set several flags for which JVMCI needs different values than c2.

        The list of the flags is
         --------------Option------------------------JVMCI-------------------------------C2------------------------------------------
        OnStackReplacePercentage ...............933........................................140
        ReservedCodeCacheSize....................64*M......................................48*M
        InitialCodeCacheSize...........................16*M......................................2496*K
        MetaspaceSize....................................12*M.......................................ScaleForWordSize(16*M)
        NewSizeThreadIncrease......................4*K.........................................ScaleForWordSize(4*k)

              Assignee:
              David Leopoldseder
              Reporter:
              David Leopoldseder
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: