8166125: [JVMCI] Missing JVMCI flag default values

Reviewed-by: twisti, kvn